--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -75,7 +75,7 @@
 <body>
     <div class="sidebar">
         <h2>Dashboard</h2>
-        <a href="game.html"><i class="fas fa-user"></i>Game</a>
+        <a href="game.html"><i class="fas fa-user"></i>Play Game</a>
         <a id="logout">Logout</a>
         <p>
             The game is a simple game.
