--- a/public/forgot-password.html
+++ b/public/forgot-password.html
@@ -13,5 +13,33 @@
         <button type="submit">Submit</button><br><br>
         <a href="index.html">Back to Login</a>
     </form>
+    <script>
+        document.getElementById("form").addEventListener("submit", (event) => {
+            event.preventDefault()
+
+            var email = document.getElementById("email").value
+
+            fetch("/forgot-password", {
+                method: "POST",
+                headers: {"Content-Type": "application/json"},
+                body: JSON.stringify({email: email}),
+                credentials: 'include'
+            }).then(response => {
+                return response.json().then(data => {
+                    if (!response.ok) {
+                        throw new Error("BOOMBAYA")
+                    }
+                    return data;
+                })
+            }).then(data => {
+                if (!data.success) {
+                    alert(data.message)
+                } else {
+                    alert(data.message)
+                    window.location.href = "reset-password.html"
+                }
+            })
+        })
+    </script>
 </body>
 </html>
