--- a/public/game.html
+++ b/public/game.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="icon" href="favicon.png">
-	<title>p5play</title>
+	<title>DODGE!</title>
 	<style>
 		html,
 		body {
@@ -22,6 +22,7 @@
 	<script src="/node_modules/q5/q5.js"></script>
 	<script src="/node_modules/p5play/planck.min.js"></script>
 	<script src="/node_modules/p5play/p5play.js"></script>
+    <script src="/node_modules/p5/lib/addons/p5.sound.js"></script>
 	
 
 	<!-- YOUR SKETCH -->
