--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -10,7 +10,7 @@
     <form action='/reset-password' method="POST" id="form">
         <h1>Reset Password</h1>
         <label for="token">Token: <input type="text" id="token" name="token" required></label>
-        <label for="new-password">New Password: <input type="text" id="new-password" name="new-password" required></label>
+        <label for="new-password">New Password: <input type="password" id="new-password" name="new-password" required></label>
         <ul id="error-log"></ul>
         <button type="submit">Reset Password</button>
     </form>
