--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -11,6 +11,7 @@
         <h1>Reset Password</h1>
         <label for="token">Token: <input type="text" id="token" name="token" required></label>
         <label for="new-password">New Password: <input type="password" id="new-password" name="new-password" required></label>
+        <label for="show"><i id="show" onclick="show()">Show</i></label>
         <ul id="error-log"></ul>
         <button type="submit">Reset Password</button>
     </form>
