--- a/public/signup.html
+++ b/public/signup.html
@@ -12,6 +12,7 @@
         <label for="email">Email: <input id="email" type="email" required></label><i>Email is used as Username</i><br><br>
         <label for="new_password">Password: <input id="new_password" type="password" required></label>
         <label for="confirm_password">Confirm Password: <input id="confirm_password" type="password" required></label>
+        <label for="show"><i id="show" onclick="show()">Show</i></label>
         <ul id="error_log"></ul><br>
         <h4>User Details</h4>
         <label for="first_name">First Name: <input id="first_name" type="text" required></label>
